cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/updates.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/updates.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  -------------------------
  (1/1) Edge has an update.
  -------------------------
   * In location "a.a":
     - edge z do b := true;
                   ^
